Fixed stuff going out of viewport

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
 	height: 100vh;
 	width: 100vw;
 	grid-gap: 20px;
+	padding: 10px;
 	background-color: var(--bg-square-inner-color);
 	background-image: linear-gradient(90deg, var(--bg-square-edge-color) 49%, var(--bg-square-edge-color) 50%, rgba(0, 0, 0, 0) 51%, rgba(0, 0, 0, 0) 100%), linear-gradient(0, var(--bg-square-edge-color) 49%, var(--bg-square-edge-color) 50%, rgba(0, 0, 0, 0) 51%, rgba(0, 0, 0, 0) 100%), radial-gradient(circle, rgba(0, 0, 0, 0) 50%, var(--bg-square-edge-color) 100%);
 	background-size: var(--bg-square-width), var(--bg-square-width) var(--bg-square-width), 100%;
@@ -153,6 +154,7 @@ body>div {
 	background-color: transparent;
 	border-radius: 10px;
 	padding: 10px;
+	width: 95%;
 	background: radial-gradient(circle, var(--bg-square-edge-color) 0%,
 			var(--bg-square-edge-color) 25%,
 			transparent 100%),
